# utidylib

./: .gitignore  .landscape.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  INSTALL.txt  LICENSE  MANIFEST.in  PKG-INFO  README.md  README.path  README.rst  README.txt  gendoc.py  install-tidy.sh  path.py  pyproject.toml  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py
.github/: FUNDING.yml  release.yml
.github/workflows/: flake8.yml  pre-commit.yml  setup.yml  test.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
scripts/: create-release  install-tidy.sh
tidy/: README.tidydll  __init__.py  error.py  lib.py  test_tidy.py
tidy/pvt_ctypes/: README.ctypes
tidy/test_data/: test.html
