[metadata]
name = uTidylib
version = 0.5
author = Michal Čihař
author_email = michal@cihar.com
license = MIT
description = Wrapper for HTML Tidy at https://www.html-tidy.org/
url = https://cihar.com/software/utidylib/
project_urls =
    Issue Tracker=https://github.com/nijel/utidylib/issues
    Documentation=https://utidylib.readthedocs.io/
    Source Code=https://github.com/nijel/utidylib
download_url = https://github.com/nijel/utidylib
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Topic :: Internet
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Environment :: Web Environment
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3

[options]
packages = tidy
include_package_data = 1

[options.package_data]
tidy = test_data/*.html

[flake8]
max-complexity = 16
select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
ignore = D10,D200,D202,D204,D205,D209,D400,D401,SF01
exclude = .git,.venv*,build
max-line-length = 88

[pycodestyle]
select = E,W1,W2,W3,W504,W505,W6
exclude = .git,.venv*,build
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
project = weblate
known_third_party = six
